modified responsive styles for the header menu, and fixed styles errors for mobile version in all components

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ const text = encodeURI('Hola, quisiera más información')
 ---
 <header class="main_header">
     <div class="header_logo">
-        <a href="/">
+        <a href="/magic-world-simple/">
             <Image src={Logo} alt="Header Logo" loading={'eager'}/>
         </a>
         <h2>Magic world Explorers</h2>
