--- a/src/css/section.css
+++ b/src/css/section.css
@@ -6,11 +6,12 @@
     flex-direction: column;
     width: 100%;
     height: 100vh;
+    padding-bottom: 20%;
     background: #FBFBFB;
   }
   .section_clouds {
     position: absolute;
-    top: -12%;
+    top: -10%;
     width: 100%;
     height: 300px;
   }
@@ -18,11 +19,10 @@
     width: 100%;
   }
   .section_content {
-    position: absolute;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
   }
@@ -33,12 +33,11 @@
     justify-content: center;
     align-items: center;
     width: 20%;
-    height: 30%;
+    height: 40%;
     min-width: 300px;
-    max-width: 35%;
+    max-width: 40%;
     max-height: 50%;
     min-height: 300px;
-    margin-top: 0px;
     border-radius: 70%;
     overflow: hidden;
   }
