--- a/src/css/team.css
+++ b/src/css/team.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 250vh;
     padding-top: 8%;
-    padding-bottom: 20%;
+    padding-bottom: 40%;
   }
   .team-section h1 {
     color: #27445D;
@@ -33,7 +33,7 @@
     align-items: center;
     gap: 5% 15%;
     width: 80%;
-    height: 95%;
+    height: 100%;
     margin-top: 8%;
   }
   .professional {
@@ -42,8 +42,9 @@
     justify-content: flex-start;
     align-items: center;
     width: 80%;
-    height: 25%;
-    max-height: 35vh;
+    height: 50%;
+    max-height: 50%;
+    margin-top: 20%;
     view-timeline-name: --image;
     view-timeline-axis: block;
     animation-timeline: --image;
