--- a/src/pages/subscribe.astro
+++ b/src/pages/subscribe.astro
@@ -3,13 +3,14 @@ import SubscribeForm from '@/components/Subscribe_form.astro'
 import Layout from "@/layouts/Layout.astro"
 import { Image } from "astro:assets";
 import Family from '@/assets/happy-family.webp'
+import '@/css/subscribe.css'
 ---
 <Layout title="Subscripcion">
     <section class="subscribe_section">
         <SubscribeForm />
         <aside class="subscribe_aside">
             <div class="aside_image_container">
-                <Image src={Family} alt="Familia">
+                <Image src={Family} alt="Familia" width={2000} height={1333}>
             </div>
             <span>*El envío de información no implica un compromiso de suscripción al jardin ni a ninguno de sus servicios. La información suministrada será usada únicamente para fines informativos y será protegida según la ley colombiana de Habeas Data.
             </span>
